policies/custom/network/authorization-policy-istio.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny-all
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
